# rest

./: .gitignore  .travis.yml  Makefile  README.md  _config.yml  cabal.project  index.html  index.md  params.json  stack-7.10.yaml  stack.yaml  tutorial.md
_layouts/: default.html
code-builder/: CHANGELOG.md  LICENSE  code-builder.cabal
code-builder/src/Code/: Build.hs
docs/: doc-index-124.html  doc-index-45.html  doc-index-46.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  doc-index.html  index-frames.html  index.html
docs/code-builder/: Code-Build-Haskell.html  Code-Build-JavaScript.html  Code-Build-PHP.html  Code-Build-Ruby.html  Code-Build.html  code-builder.haddock  doc-index.html  index-frames.html  index.html  mini_Code-Build-Haskell.html  mini_Code-Build-JavaScript.html  mini_Code-Build-PHP.html  mini_Code-Build-Ruby.html  mini_Code-Build.html
docs/rest-client/: Rest-Client-Base.html  Rest-Client-Internal.html  doc-index.html  index-frames.html  index.html  mini_Rest-Client-Base.html  mini_Rest-Client-Internal.html  rest-client.haddock
docs/rest-core/: Rest-Api.html  Rest-Container.html  Rest-Dictionary-Combinators.html  Rest-Dictionary-Types.html  Rest-Dictionary.html  Rest-Driver-Perform.html  Rest-Driver-RestM.html  Rest-Driver-Routing.html  Rest-Driver-Types.html  Rest-Error.html  Rest-Handler.html  Rest-Info.html  Rest-Resource.html  Rest-Run.html  Rest-Schema.html  Rest.html  doc-index-45.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  (+20 more)
docs/rest-gen/: Rest-Gen-Base.html  Rest-Gen-Config.html  Rest-Gen-Docs.html  Rest-Gen-Haskell.html  Rest-Gen-JavaScript.html  Rest-Gen-Ruby.html  Rest-Gen-Types.html  Rest-Gen.html  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  index.html  (+27 more)
include/: monad-compat.h
rest-client/: CHANGELOG.md  rest-client.cabal
rest-client/src/Rest/Client/: Base.hs  Internal.hs
rest-core/: CHANGELOG.md  LICENSE  rest-core.cabal
rest-core/src/: Rest.hs
rest-core/src/Rest/: Action.hs  Api.hs  Container.hs  Dictionary.hs  Error.hs  Handler.hs  Info.hs  Multipart.hs  ReadInfo.hs  Resource.hs  Run.hs  Schema.hs  ShowUrl.hs
rest-core/src/Rest/Dictionary/: Combinators.hs  Types.hs
rest-core/src/Rest/Driver/: Perform.hs  RestM.hs  Routing.hs  Types.hs
rest-core/src/Rest/Driver/Routing/: Internal.hs
rest-core/src/Rest/Format/: Json.hs
rest-core/tests/: Runner.hs
rest-discovery/: CHANGELOG.md  rest-discovery.cabal
rest-discovery/src/Rest/Discovery/Api/: ApiDescription.hs
rest-discovery/src/Rest/Discovery/Type/: ApiDescription.hs
rest-example/: .gitignore  CHANGELOG.md  LICENSE  api.js  rest-example.cabal  script.sh
rest-example-wai/: rest-example-wai.cabal  script.sh
rest-example-wai/src/: ApiTypes.hs
rest-example-wai/src/Type/: CreatePost.hs  Post.hs  PostError.hs  User.hs  UserPost.hs
rest-example/client/: restexample-client.cabal
rest-example/client/src/Restexample/Client/: Post.hs  Test.hs  User.hs
rest-example/client/src/Restexample/Client/Post/: Comment.hs
rest-example/client/src/Restexample/Client/Test/: FooBar.hs  Import.hs  SubscriptionSite.hs
rest-example/example-api/: Api.hs  ApiTypes.hs  Example.hs
rest-example/example-api/Api/: ApiDescription.hs  Post.hs  Test.hs  User.hs
rest-example/example-api/Api/Post/: Comment.hs
rest-example/example-api/Api/Test/: DashedName.hs  Err2.hs  ReservedName.hs
rest-example/example-api/Type/: ApiDescription.hs  Comment.hs  CreatePost.hs  PersistUser.hs  Post.hs  PostError.hs  User.hs  UserComment.hs  UserInfo.hs  UserPost.hs  UserSignupError.hs
rest-example/generate/: Main.hs
rest-example/happstack/: Main.hs
rest-example/snap/: Main.hs
rest-example/src/: Gen.hs  Main.hs
rest-example/src/Api/: ApiDescription.hs  Post.hs  User.hs
rest-example/src/Type/: ApiDescription.hs  CreatePost.hs  Post.hs  PostError.hs  User.hs  UserInfo.hs  UserPost.hs
rest-example/wai/: Main.hs
rest-gen/: CHANGELOG.md  rest-gen.cabal
rest-gen/files/Docs/: api-docs-all.st  api-docs-resource.st  bootstrap.min.css  docs.css  docs.js  jquery-nightly.js
rest-gen/files/Haskell/: Base.hs  Internal.hs
rest-gen/files/Javascript/: base.js  epilogue.js  prelude.js
rest-gen/files/Ruby/: base.rb
rest-gen/src/Rest/: Gen.hs
rest-gen/tests/: Runner.hs
rest-happstack/: CHANGELOG.md  rest-core.cabal  rest-happstack.cabal
rest-happstack/src/Rest/Driver/: Happstack.hs
rest-happstack/src/Rest/Driver/Happstack/: Docs.hs
rest-minimal/: rest-example-minimal.cabal
rest-minimal/src/: Main.hs
rest-snap/: CHANGELOG.md  rest-snap.cabal
rest-snap/src/Rest/Driver/: Snap.hs
rest-stringmap/: CHANGELOG.md  rest-stringmap.cabal
rest-stringmap/src/Rest/StringMap/: Util.hs
rest-stringmap/src/Rest/StringMap/HashMap/: Lazy.hs  Strict.hs
rest-stringmap/src/Rest/StringMap/Map/: Lazy.hs  Strict.hs  overlapping-compat.h
rest-types/: CHANGELOG.md  rest-types.cabal
rest-types/src/Data/String/: ToString.hs
rest-types/src/Rest/Types/: Container.hs  Error.hs  Info.hs  Method.hs  Range.hs  ShowUrl.hs  Void.hs
rest-types/src/Rest/Types/Container/: Map.hs  Resource.hs
rest-wai/: CHANGELOG.md  rest-wai.cabal
rest-wai/src/Rest/Driver/: Wai.hs
stylesheets/: stylesheet.css
(+99 files in other folders)
