name:                code-builder
version:             0.1.3
synopsis:            Simple system for generating code.
description:         Simple system for generating code.
license:             BSD3
license-file:        LICENSE
author:              Silk
maintainer:          code@silk.co
category:            Data
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  exposed-modules:
    Code.Build
    Code.Build.Haskell
    Code.Build.JavaScript
    Code.Build.PHP
    Code.Build.Ruby
  build-depends:
      base >= 4.7 && < 4.12,
      base-compat-batteries == 0.10.*
