name:                rest-client
version:             0.5.0.2
description:         Utility library for use in generated API client libraries.
synopsis:            Utility library for use in generated API client libraries.
maintainer:          code@silk.co
category:            Web
build-Type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

Library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest.Client.Base
    Rest.Client.Internal
  build-depends:
      base == 4.*
    , aeson-utils >= 0.2.1 && < 0.4
    , bytestring >= 0.9 && < 0.11
    , case-insensitive >= 0.4 && < 1.3
    , data-default == 0.5.*
    , exceptions == 0.8.*
    , http-conduit == 2.1.*
    , http-types >= 0.7 && < 0.9
    , hxt >= 9.2 && < 9.4
    , hxt-pickle-utils == 0.1.*
    , monad-control (>= 0.3.3.1 && < 0.4) || (>= 1.0.0.3 && < 1.1)
    , mtl >= 2.0 && < 2.3
    , resourcet >= 1.1.4 && < 1.2
    , rest-types == 1.13.*
    , tostring == 0.2.*
    , transformers >= 0.3 && < 0.5
    , transformers-base >= 0.4.4 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , uri-encode == 1.5.*
    , utf8-string >= 0.3 && < 1.1
