name:                rest-client
version:             0.5.2.3
description:         Utility library for use in generated API client libraries.
synopsis:            Utility library for use in generated API client libraries.
maintainer:          code@silk.co
category:            Web
build-Type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE
  src/Rest/Client/overlapping-compat.h

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

Library
  ghc-options:        -Wall
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:
    Rest.Client.Base
    Rest.Client.Internal
  build-depends:
      base >= 4.7 && < 4.12
    , aeson-utils >= 0.2.1 && < 0.4
    , base-compat-batteries == 0.10.*
    , bytestring >= 0.9 && < 0.11
    , case-insensitive >= 0.4 && < 1.3
    , data-default >= 0.5 && < 0.8
    , exceptions >= 0.8 && < 0.11
    , http-client >= 0.3 && < 0.6
    , http-conduit >= 2.1 && < 2.4
    , http-types >= 0.7 && < 0.12
    , hxt >= 9.2 && < 9.4
    , hxt-pickle-utils == 0.1.*
    , monad-control (>= 0.3.3.1 && < 0.4) || (>= 1.0.0.3 && < 1.1)
    , mtl >= 2.0 && < 2.3
    , resourcet >= 1.1.4 && < 1.2
    , rest-types >= 1.13 && < 1.15
    , tostring == 0.2.*
    , transformers >= 0.3 && < 0.6
    , transformers-base >= 0.4.4 && < 0.5
    , transformers-compat >= 0.3 && < 0.7
    , uri-encode == 1.5.*
    , utf8-string >= 0.3 && < 1.1
