Name:             rest-core
Version:          0.27.0.1
Description:      Rest API library.
Synopsis:         Rest API library.
Maintainer:       code@silk.co
Category:         Web
Build-Type:       Simple
Cabal-Version:    >= 1.8
License:          BSD3
License-File:     LICENSE

Library
  GHC-Options:     -Wall
  Hs-Source-Dirs:   src
  Build-Depends:
      base                      == 4.*
    , aeson                     >= 0.7    &&  < 0.8
    , aeson-utils               == 0.2.*
    , bytestring                >= 0.9    &&  < 0.11
    , cgi                       == 3001.1.*
    , containers                >= 0.3    &&  < 0.6
    , either                    >= 3.4    &&  < 4.2
    , errors                    == 1.4.*
    , fclabels                  == 2.0.*
    , hxt                       >= 9.2    &&  < 9.4
    , hxt-pickle-utils          == 0.1.*
    , json-schema               == 0.4.*
    , mtl                       >= 2.0    &&  < 2.2
    , multipart                 == 0.1.*
    , random                    == 1.0.*
    , rest-types                == 1.9.0.1
    , safe                      >= 0.2    &&  < 0.4
    , split                     >= 0.1    &&  < 0.3
    , text                      >= 0.11   &&  < 1.2
    , tostring                  == 0.2.*
    , transformers              >= 0.2    &&  < 0.4
    , uri-encode                == 1.5.*
    , utf8-string               == 0.3.*
    , uuid                      >= 1.2    &&  < 1.4

  Exposed-Modules:  Rest
                    Rest.Api
                    Rest.Container
                    Rest.Dictionary
                    Rest.Dictionary.Combinators
                    Rest.Dictionary.Types
                    Rest.Driver.Perform
                    Rest.Driver.RestM
                    Rest.Driver.Routing
                    Rest.Driver.Types
                    Rest.Error
                    Rest.Handler
                    Rest.Info
                    Rest.Resource
                    Rest.Run
                    Rest.Schema

Test-suite rest-tests
  build-depends:       base                 >= 4.5    && < 4.7
                     , HUnit                == 1.2.*
                     , bytestring           >= 0.9    && < 0.11
                     , mtl                  >= 2.0    && < 2.2
                     , rest-core
                     , test-framework       == 0.8.*
                     , test-framework-hunit == 0.3.*
  hs-source-dirs:      tests
  main-is:             Runner.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall

Source-repository head
  Type:              Git
  Location:          https://github.com/silkapp/rest.git
