name:                rest-core
version:             0.36.0.3
description:         Rest API library.
synopsis:            Rest API library.
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest
    Rest.Api
    Rest.Container
    Rest.Dictionary
    Rest.Dictionary.Combinators
    Rest.Dictionary.Types
    Rest.Driver.Perform
    Rest.Driver.RestM
    Rest.Driver.Routing
    Rest.Driver.Types
    Rest.Error
    Rest.Handler
    Rest.Info
    Rest.Resource
    Rest.Run
    Rest.Schema
    Rest.ShowUrl
  build-depends:
      base >= 4.5 && < 4.9
    , aeson >= 0.7 && < 0.10
    , aeson-utils >= 0.2 && < 0.4
    , bytestring >= 0.9 && < 0.11
    , case-insensitive >= 1.2 && < 1.3
    , errors >= 1.4 && < 2.1
    , fclabels == 2.0.*
    , hxt >= 9.2 && < 9.4
    , hxt-pickle-utils == 0.1.*
    , json-schema >= 0.6 && < 0.8
    , mtl >= 2.0 && < 2.3
    , mtl-compat >= 0.1 && < 0.3
    , multipart >= 0.1.1 && < 0.2
    , random >= 1.0 && < 1.2
    , rest-stringmap == 0.2.*
    , rest-types == 1.14.*
    , safe >= 0.2 && < 0.4
    , split >= 0.1 && < 0.3
    , text >= 0.11 && < 1.3
    , transformers >= 0.2 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , unordered-containers == 0.2.*
    , uri-encode == 1.5.*
    , utf8-string >= 0.3 && < 1.1
    , uuid >= 1.2 && < 1.4

test-suite rest-tests
  ghc-options:       -Wall
  hs-source-dirs:    tests
  main-is:           Runner.hs
  type:              exitcode-stdio-1.0
  build-depends:
      base >= 4.5 && < 4.9
    , HUnit == 1.2.*
    , bytestring >= 0.9 && < 0.11
    , mtl >= 2.0 && < 2.3
    , rest-core
    , test-framework == 0.8.*
    , test-framework-hunit == 0.3.*
    , transformers >= 0.3 && < 0.5
    , transformers-compat >= 0.3 && < 0.5
    , unordered-containers == 0.2.*
