name:                rest-example-wai
version:             0.1.0.0
synopsis:            Example project for rest on top of Warp using WAI.
homepage:            http://www.github.com/silkapp/rest
license:             BSD3
license-file:        LICENSE
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  LICENSE

executable rest-example-wai
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    src
  other-modules:
    Api
    Api.Post
    Api.User
    ApiTypes
    Main
    Type.CreatePost
    Type.Post
    Type.PostError
    Type.User
    Type.UserInfo
    Type.UserPost
    Type.UserSignupError
  build-depends:
      base >= 4.6 && < 4.8
    , http-types == 0.8.*
    , wai  == 2.1.0.*
    , warp == 2.1.5.*
    , rest-core
    , mtl
    , regular-xmlpickler
    , hxt
    , regular
    , time
    , aeson
    , json-schema
    , rest-wai
    , text
    , stm
    , containers

