name:                rest-example
version:             0.1.0.0
synopsis:            Example project for rest
homepage:            http://www.github.com/silkapp/rest
license:             BSD3
license-file:        LICENSE
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  LICENSE

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    example-api
  exposed-modules:
    Api
    Api.Post
    Api.Post.Comment
    Api.User
    ApiTypes
    Example
    Type.Comment
    Type.CreatePost
    Type.Post
    Type.PostError
    Type.User
    Type.UserComment
    Type.UserInfo
    Type.UserPost
    Type.UserSignupError
  build-depends:
      base >= 4.6 && < 4.8
    , aeson
    , containers
    , filepath
    , hxt
    , json-schema
    , monad-control
    , mtl
    , regular
    , regular-xmlpickler
    , rest-core
    , rest-types
    , safe
    , stm
    , text
    , time
    , transformers-base
    , unordered-containers

-------------------------------------------------------------------------------
-- Executables linking against the rest-example library.

flag happstack
  description: Build the rest on happstack example.
  default:     False
  manual:      True

flag wai
  description: Build the rest on wai example.
  default:     False
  manual:      True

flag snap
  description: Build the rest on snap example.
  default:     False
  manual:      True

flag gen
  description: Build the rest on happstack example.
  default:     True
  manual:      True

executable rest-example-happstack
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    happstack
  if flag(happstack)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.8
      , happstack-server
      , mtl
      , rest-core
      , rest-example
      , rest-example
      , rest-happstack
  else
    buildable: False

executable rest-example-wai
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    wai
  if flag(wai)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.8
      , mtl
      , rest-core
      , rest-example
      , rest-wai
      , wai
      , warp
  else
    buildable: False

executable rest-example-snap
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    snap
  if flag(snap)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.8
      , mtl
      , rest-core
      , rest-example
      , rest-snap
      , snap-core
      , snap-server
  else
    buildable: False

executable rest-example-gen
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    generate
  if flag(gen)
    buildable: True
    build-depends:
        base >= 4.6 && < 4.8
      , haskell-src-exts
      , mtl
      , rest-core
      , rest-example
      , rest-gen
  else
    buildable: False

