name:                rest-gen
version:             0.20.0.0
description:         Documentation and client generation from rest definition.
synopsis:            Documentation and client generation from rest definition.
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE
data-dir:            files

data-files:
  Docs/*.st
  Docs/*.js
  Docs/*.css
  Javascript/prelude.js
  Javascript/epilogue.js
  Ruby/base.rb
extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:
    Rest.Gen
    Rest.Gen.Base
    Rest.Gen.Base.ActionInfo
    Rest.Gen.Base.ActionInfo.Ident
    Rest.Gen.Base.ApiTree
    Rest.Gen.Config
    Rest.Gen.Docs
    Rest.Gen.Haskell
    Rest.Gen.JavaScript
    Rest.Gen.Ruby
    Rest.Gen.Types
  other-modules:
    Paths_rest_gen
    Rest.Gen.Base.JSON
    Rest.Gen.Base.JSON.Pretty
    Rest.Gen.Base.Link
    Rest.Gen.Base.XML
    Rest.Gen.NoAnnotation
    Rest.Gen.Utils
  build-depends:
      base >= 4.5 && < 4.10
    , Cabal >= 1.16 && < 1.26
    , HStringTemplate >= 0.6 && < 0.9
    , aeson >= 0.7 && < 1.2
    , base-compat >= 0.8 && < 0.10
    , blaze-html >= 0.5 && < 0.9
    , code-builder == 0.1.*
    , directory >= 1.1 && < 1.4
    , fclabels >= 1.0.4 && < 2.1
    , filepath >= 1.2 && < 1.5
    , hashable >= 1.1 && < 1.3
    , haskell-src-exts >= 1.18.1 && < 1.20
    , hxt >= 9.2 && < 9.4
    , json-schema >= 0.6 && < 0.8
    , pretty >= 1.0 && < 1.2
    , process >= 1.0 && < 1.5
    , rest-core >= 0.38 && < 0.40
    , safe >= 0.2 && < 0.4
    , semigroups >= 0.5 && < 0.19
    , scientific >= 0.3.2 && < 0.4
    , split >= 0.1 && < 0.3
    , text >= 0.11 && < 1.3
    , uniplate >= 1.6.12 && < 1.7
    , unordered-containers == 0.2.*
    , vector >= 0.10 && < 0.13
  if impl(ghc < 7.8)
    build-depends: tagged >= 0.2 && < 0.9

test-suite rest-gen-tests
  hs-source-dirs:    tests
  main-is:           Runner.hs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  build-depends:
      base >= 4.5 && < 4.10
    , HUnit >= 1.2 && < 1.6
    , fclabels >= 1.0.4 && < 2.1
    , haskell-src-exts >= 1.15.0 && < 1.20
    , rest-core >= 0.38 && < 0.40
    , rest-gen
    , test-framework == 0.8.*
    , test-framework-hunit == 0.3.*
