name:                rest-happstack
version:             0.3.1.1
description:         Rest driver for Happstack.
synopsis:            Rest driver for Happstack.
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-extensions: NoImplicitPrelude
  default-language:   Haskell2010
  exposed-modules:
    Rest.Driver.Happstack
    Rest.Driver.Happstack.Docs
  build-depends:
      base == 4.*
    , base-compat-batteries == 0.10.*
    , containers >= 0.4 && < 0.6
    , happstack-server >= 7.0.5 && < 7.6
    , mtl >= 2.0 && < 2.3
    , rest-core >= 0.34 && < 0.40
    , rest-gen >= 0.14 && < 0.21
    , utf8-string >= 0.3 && < 1.1
