name:                rest-minimal
version:             0.1.0.0
synopsis:            Example project for rest
homepage:            http://www.github.com/silkapp/rest
license:             BSD3
license-file:        LICENSE
author:              Silk B.V.
maintainer:          code@silk.co
copyright:           2014 Silk B.V.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rest-example-minimal
  default-language:  Haskell2010
  ghc-options:       -Wall
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:
      base >= 4.6 && < 4.8
    , mtl
    , rest-core
    , rest-gen
    , rest-wai
    , warp
