name:                rest-snap
version:             0.1.17.13
description:         Rest driver for Snap.
synopsis:            Rest driver for Snap.
maintainer:          code@silk.co
category:            Web
build-type:          Simple
cabal-version:       >= 1.8
license:             BSD3
license-file:        LICENSE

extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type:              git
  location:          https://github.com/silkapp/rest.git

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Rest.Driver.Snap
  build-depends:
      base == 4.*
    , bytestring >= 0.9 && < 0.11
    , case-insensitive >= 0.4 && < 1.3
    , rest-core >= 0.31 && < 0.33
    , safe >= 0.2 && < 0.4
    , snap-core == 0.9.*
    , unordered-containers == 0.2.*
    , uri-encode == 1.5.*
    , utf8-string == 0.3.*
